* CHANGELOG
=========================================

2017-08-10

- Fixed some problems regarding EPOLLET with a threadpool, using EPOLLONESHOT to
  manually rearm socket descriptor at every event, at the cost of an additional
  system call
- Refactored command handling, trying to decouple a bit more modules

2017-02-11

- Fixed some bugs
- Added CLUSTERINFO commands, retrieve some informations regarding cluster state

2017-02-10

- Almost complete refactoring of the code
- Better organization, removed some useless commands
- Rethink of the distribution part of the system
- Rename of the project

2017-01-19

- Rough support to distribution across a cluster of machines
- Added murmur hashing algorithm to the hashing header

2016-09-06

- Added new commands INCF and DECF, respectively increment/decrement by float quantity
  the float value represented by key specified
- Added new command TTL, returning the time to live of a specified key
- Minor fixes

2016-09-05

- Added new command EXPIRE, set a timer in milliseconds to a key after that the key and his value
  is wiped
- Added new comand GETP, return infos of a key-value pair
- Improved shibui-cli, printing help and correctly handling SUB and TAIL command

2016-08-31

- Started shibui-cli, supports basic commands without any human readability
  improvement

2016-08-30

- Corrected some bug, added new commands `APPEND key value` and `PREPEND key value`

2016-08-29

- Altered some commands, now DEL, SUB and UNSUB accept a list of keys, INC and
  DEC accept an optional value to be added to the current integer value of the
  key

2016-08-26

- Added new command `FUZZYSCAN pattern`, perform a search through the keyspace
  returning all values associated to keys that match a given pattern by fuzzy
  search.

- Added new command `UNSUB key` to stop receiving feeds from the key.

- Added new command `FLUSH' to delete all keys in the keyspace

- Fixed rehash_map code in order to update data history and the subscribers