@@ -1,4 +1,4 @@
 # node1 configuration file
 127.0.0.1	8181	2cca94f422dd40cf934a916da9df5032	0
 127.0.0.1	8182	5d151f1ac99c4291806ed6b99a2e4b59	1
-# 127.0.0.1	8183	650b85b853fb41d593e69aa84dd86a76	0
+127.0.0.1	8183	650b85b853fb41d593e69aa84dd86a76	0
